# mtech-materials

./: .gitignore
Assignments/Sem2/DNN/: .gitignore  AGENTS.md  README.md  assignment1_extracted.txt  pyproject.toml  requirements.txt  run_step1.py  run_step2.py  run_step3.py  run_step4.py  run_url_loading_demo.py  sample.ipynb
Assignments/Sem2/DNN/src/: __init__.py  assignment_results.py  cli.py  data_pipeline.py  logistic_regression.py  metrics.py  mlp.py
Assignments/Sem2/DNN/tests/: test_smoke.py
Assignments/Sem2/IR/: IR_Large_Dataset_Report.ipynb  main.py  requirements.txt
Assignments/Sem2/IR/data/: queries.csv  queries_large.csv
Assignments/Sem2/IR/docs/: CODE_WALKTHROUGH.md  DATASET_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_REPORT_STRUCTURE.md  PAIR_PROGRAMMING_CONTEXT.md  QUICK_START.md  QUIZ_AND_EXERCISES.md  README.md  README_DOCUMENTATION.md  REPORT_ANALYSIS.md  REPORT_TABLES.md  START_HERE.md  STUDY_GUIDE.md  SUBMISSION_CHECKLIST.md  VISUAL_DIAGRAMS.md  ZIP_READY_MANIFEST.md
Assignments/Sem2/IR/src/: cluster.py  data_loader.py  features.py  finalize.py  labels.py  patterns.py  queries.py  report_plots.py
